Minor tweaks to get the base build working.

--- a/base.cfg
+++ b/base.cfg
@@ -198,10 +198,5 @@ scripts = ipython=ipzope
 recipe = gocept.recipe.env
 
 [sources]
-nrel.hpc         = git git@scctools.nrel.gov:nrel.hpc.git
-nrel.uniqueindex = git git@scctools.nrel.gov:nrel.uniqueindex.git
-#nrel.hpc_theme   = git git@scctools.nrel.gov:nrel.hpc_theme.git
-#nrel.hpc_profile = git git@scctools.nrel.gov:nrel.hpc_profile.git
-scc.status       = git git@scctools.nrel.gov:scc.status.git
-Products.hpcfsdextender = git git@scctools.nrel.gov:Products.hpcfsdextender.git branch=fsd3-branch
-#contentratings = svn https://svn.plone.org/svn/collective/contentratings/trunk/
+#scc.status       = git git@scctools.nrel.gov:scc.status.git
+##contentratings = svn https://svn.plone.org/svn/collective/contentratings/trunk/
