--- a/develop.cfg
+++ b/develop.cfg
@@ -28,7 +28,6 @@ extensions +=
     mr.developer
 
 eggs +=
-#    WingDBG
 #    PdbSublimeTextSupport
     Products.PDBDebugMode
     plone.reload
@@ -43,7 +42,7 @@ eggs +=
 # requires graphviz
     Products.DCWorkflowGraph
     Products.DCWorkflow
-
+#    collective.zodbbrowser
 #    Products.Gloworm
 #    mr.freeze
 #    sauna.reload
@@ -67,10 +66,8 @@ eggs +=
 
 
 zcml +=
-#    ilrt.contentmigrator
-#    plone.reload
+    plone.reload
 #    collective.zodbbrowser
-#    plone.app.transmogrifier
 
 
 parts +=
