--- a/zope-versions.cfg
+++ b/zope-versions.cfg
@@ -33,7 +33,7 @@ ZopeUndo = 2.12.0
 
 # ZTK KGS overrides
 manuel = 1.1.1
-#mechanize = 0.2.5
+mechanize = 0.2.5
 python-gettext = 1.1.1
 ZConfig = 2.9.0
 ZODB3 = 3.10.3
