--- a/zopeapp-versions.cfg
+++ b/zopeapp-versions.cfg
@@ -1,5 +1,5 @@
 [versions]
-# ZopeApp
+# ZopeApp 1.0.4
 zope.app.applicationcontrol = 3.5.9
 zope.app.appsetup = 3.14.0
 zope.app.authentication = 3.8.0
