--- a/ztk-versions.cfg
+++ b/ztk-versions.cfg
@@ -76,7 +76,7 @@ distribute = 0.6.21
 docutils = 0.7
 Jinja2 = 2.5.5
 # Newer versions of mechanize are not fully py24 compatible.
-#mechanize = 0.1.11
+mechanize = 0.1.11
 Paste = 1.7.5.1
 PasteDeploy = 1.3.4
 PasteScript = 1.7.4.2
