--- a/buildout.cfg
+++ b/buildout.cfg
@@ -5,15 +5,13 @@ user = admin:admin
 extends =
     base.cfg
     versions.cfg
-    versions_additional.cfg
-#    http://dist.plone.org/release/4.1.2a2/versions.cfg
+    versions-additional.cfg
+#http://dist.plone.org/release/4.2b1/versions.cfg
 
 
 zeo-address = 127.0.0.1:50000
-# Zope  instance
 http-address = 50001
-# Zope client 2
-#client2-address = 8091
+#client2-address = 50002
 
 
 ############################################
@@ -24,11 +22,22 @@ http-address = 50001
 #
 eggs =
     Plone
-#    PIL==1.1.6
+    Pillow
+    plone.app.theming
+#    foresman.diazotheme
+
+    Products.Scrawl
+    xhostplus.gallery
+
+    redturtle.video
+    collective.rtvideo.youtube
+
+    Products.PloneFormGen
+    collective.quickupload
+
+    collective.googleanalytics
 
 #    plonetheme.responsivetheme
-#    Products.PloneFormGen
-#    collective.quickupload
 
 
 ############################################
@@ -45,11 +54,6 @@ develop =
 # use them.
 zcml =
 #    my.package
-
-############################################
-debug-mode = off
-deprecation-warnings = off
-verbose-security = off
 
 
 ############################################
