--- a/prod.cfg
+++ b/prod.cfg
@@ -5,6 +5,10 @@ eggs-directory = ${buildout:directory}/../buildout-cache/eggs
 download-cache = ${buildout:directory}/../buildout-cache/downloads
 extends-cache = ${buildout:directory}/../buildout-cache/extends
 
+debug-mode = off
+deprecation-warnings = off
+verbose-security = off
+
 
 # If you try to start Zope as root, it will change user id to run as
 # the effective user specified here. This user id must own the var directory
