--- a/base.cfg
+++ b/base.cfg
@@ -197,6 +197,30 @@ scripts = ipython=ipzope
 [env]
 recipe = gocept.recipe.env
 
+
 [sources]
-#scc.status       = git git@scctools.nrel.gov:scc.status.git
-##contentratings = svn https://svn.plone.org/svn/collective/contentratings/trunk/
+foresman.diazotheme = fs foresman.diazotheme
+
+#templer.core = svn https://svn.plone.org/svn/collective/templer.core/trunk
+#templer.buildout = svn https://svn.plone.org/svn/collective/templer.buildout/trunk
+#templer.zope = svn https://svn.plone.org/svn/collective/templer.zope/trunk
+#templer.plone = svn https://svn.plone.org/svn/collective/templer.plone/trunk
+#contentratings = svn https://svn.plone.org/svn/collective/contentratings/trunk/
+
+
+[plonesite]
+recipe = collective.recipe.plonesite
+site-id = gf
+#admin-user = admin
+instance = instance
+zeoserver = zeoserver
+profiles-initial =
+#    Products.CMFPlone:plone-content
+#    my.package:initial
+profiles =
+#    my.package:default
+#    my.other.package:default
+post-extras =
+#    ${buildout:directory}/my_script.py
+pre-extras =
+#    ${buildout:directory}/my_other_script.py
