--- a/buildout.cfg
+++ b/buildout.cfg
@@ -24,9 +24,15 @@ eggs =
     Plone
     Pillow
     plone.app.theming
-#    foresman.diazotheme
+    foresman.diazotheme
 
-    Products.Scrawl
+
+#    Products.Scrawl
+    collective.blog.view
+    collective.blog.feeds
+    collective.blog.portlets
+    collective.blog.star
+
     xhostplus.gallery
 
     redturtle.video
@@ -36,24 +42,17 @@ eggs =
     collective.quickupload
 
     collective.googleanalytics
+#    Solgema.fullcalendar
 
 #    plonetheme.responsivetheme
 
-
-############################################
-# Development Eggs
-# ----------------
 develop =
 #    src/my.package
 
 
-############################################
-# ZCML Slugs
-# ----------------
-# Some eggs need ZCML slugs to tell Zope to
-# use them.
 zcml =
 #    my.package
+    xhostplus.gallery
 
 
 ############################################
@@ -80,6 +79,9 @@ parts =
 #    client2
 #    lxml
 #    pylxml
+#    plonesite
+
+#    templer
 
 ############################################
 [versions]
