--- a/develop.cfg
+++ b/develop.cfg
@@ -33,7 +33,7 @@ eggs +=
     Products.PDBDebugMode
     plone.reload
     Products.DocFinderTab
-    Zopeskel
+    ZopeSkel
 #    uwosh.northstar
     Products.PrintingMailHost
     Products.DocFinderTab
