--- a/versions-untagged.cfg
+++ b/versions-untagged.cfg
@@ -1,10 +1,77 @@
 [versions]
+Pillow = 1.7.4
 Products.DCWorkflowGraph = 0.4
 Products.PDBDebugMode = 1.1
+Products.PloneFormGen = 1.7b5
 Products.PrintingMailHost = 0.7
+Products.PythonField = 1.1.3
+Products.TALESField = 1.1.3
+Products.TemplateFields = 1.2.5
 ZopeSkel = 2.21.2
+collective.blog.feeds = 1.3
+collective.blog.portlets = 1.2
+collective.blog.star = 1.0
+collective.blog.view = 1.4
+collective.googleanalytics = 1.2
+collective.quickupload = 1.2.1
+collective.recipe.plonesite = 1.3
+collective.rtvideo.youtube = 0.1.0
+gdata = 2.0.15
 ipython = 0.10
-mechanize = 0.2.5
+redturtle.video = 0.7.1
+xhostplus.gallery = 1.7.0
+
+#Required by:
+#Products.fatsyndication 1.0.1
+Products.basesyndication = 1.0.0
+
+#Required by:
+#collective.blog.feeds 1.3
+Products.fatsyndication = 1.0.1
+
+#Required by:
+#redturtle.video 0.7.1
+#collective.blog.star 1.0
+collective.flowplayer = 3.0rc4
+
+#Required by:
+#Products.PloneFormGen 1.7b5
+collective.js.jqueryui = 1.8.13.1
+
+#Required by:
+#collective.blog.star 1.0
+collective.twitterportlet = 0.10
+
+#Required by:
+#redturtle.video 0.7.1
+#collective.flowplayer 3.0rc4
+hachoir-core = 1.3.3
+
+#Required by:
+#redturtle.video 0.7.1
+#collective.flowplayer 3.0rc4
+hachoir-metadata = 1.3.3
+
+#Required by:
+#redturtle.video 0.7.1
+#collective.flowplayer 3.0rc4
+hachoir-parser = 1.3.4
+
+#Required by:
+#oauth2 1.5.211
+httplib2 = 0.7.2
+
+#Required by:
+#python-twitter 0.8.2
+oauth2 = 1.5.211
+
+#Required by:
+#collective.twitterportlet 0.10
+python-twitter = 0.8.2
+
+#Required by:
+#collective.blog.star 1.0
+qi.portlet.TagClouds = 1.33
 
 #Required by:
 #z3c.recipe.staticlxml 0.7.2
